Fixed for left aligned menu

--- a/assets/component-mega-menu.css
+++ b/assets/component-mega-menu.css
@@ -78,7 +78,7 @@
   text-decoration-thickness: 0.2rem;
 }
 
-.header--top-center .mega-menu__list--condensed {
+.mega-menu .mega-menu__list--condensed {
   display: block;
 }
 
